2010-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSXibLoader.m: New file with basic XIB format
	loading.
	* Source/GNUmakefile: Add new file.

2010-03-13 German Arias <german@xelalug.org>

	* Source/NSSpellChecker.m: Added missing internationalisation.
	* Resources/Spanish.lproj/Localizable.strings: Spanish translation
 	to string "Guess".

2010-03-13 German Arias <german@xelalug.org>

	* Resources/Spanish.lproj/Localizable.strings: Spanish translation
 	to title "Print Panel".

2010-03-13 German Arias <german@xelalug.org>

	* Source/NSPrintPanel.m: Set the title of the panel (Print Panel),
        because the panel show the title "window" even when gorm file have
	other title.

2010-03-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-_borderView),
	* Source/NSView.m (-_subtreeDescription): Add two Cocoa debug
	helper methods.

2010-03-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundleAdditions.m (NSNibOutletConnector
	-establishConnection): Undo the last change to this method, as
	it should not retain the assign value.

2005-03-12  Doug Simons <doug.simons@testplant.com>

	* Source/NSTextView.m: (-readSelectionFromPasteboard:type:): 
	Set insertion point _after_ pasted text, don't select it. 

2005-03-12  Doug Simons <doug.simons@testplant.com>

	* Source/NSTextView.m: (-mouseDown:): Only try to drag text
	if the user starts by dragging the mouse. A simple click within
	the selection will now set the insertion point.
	* Source/NSView.m: (-setNeedsDisplayInRect:): Avoid unnecessary
	work when invalid rectangle is empty.

2005-03-11  Doug Simons <doug.simons@testplant.com>

	* Source/NSClipView.m: Call isFlipped rather than accessing
	flag directly (fixes a problem with view loaded from a nib).

2010-03-11  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSCell.m (-_drawEditorWithFrame:inView:): Fix some
	optimistic coding which expected the controlView argument to
	always be a subclass of NSControl and was causing a crash in